# tap-readme

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
.github/: renovate.json5
.github/workflows/: build.yaml  build.yml  test.yaml  test.yml
tap_readme/: __init__.py  __main__.py  client.py  openapi.json  streams.py  tap.py
tests/: test_core.py
