[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.28",
]

[project]
name = "tap-readme"
description = "Singer tap for ReadMe.com, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "ReadMe.com",
  "singer.io",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
maintainers = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
authors = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "requests~=2.32.0",
  "singer-sdk~=0.53.2",
]
urls.Documentation = "https://github.com/reservoir-data/tap-readme#readme"
urls.Homepage = "https://github.com/reservoir-data/tap-readme"
urls.Repository = "https://github.com/reservoir-data/tap-readme"
scripts."tap-readme" = "tap_readme.tap:TapReadMe.cli"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest~=9.0",
  "singer-sdk[testing]",
]
typing = [
  "mypy~=1.19.0",
  "ty>=0.0.1a21",
  "types-requests",
]

[tool.hatch]
version.source = "vcs"

[tool.uv]
required-version = ">=0.8"
prerelease = "allow"
preview = true

[tool.ruff]
line-length = 88
lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
  "PD",     # pandas-vet
]
lint.per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
lint.unfixable = [
  "ERA001", # commented-out-code
]
lint.flake8-annotations.allow-star-arg-any = true
lint.isort.known-first-party = [
  "tap_readme",
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.deptry]
package_module_name_map.mypy = "mypy"
package_module_name_map.pytest = "pytest"
package_module_name_map.ty = "ty"
package_module_name_map.types-requests = "requests"
per_rule_ignores.DEP002 = [
  "deptry",
  "mypy",
  "pytest",
]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest]
ini_options.addopts = "-vvv"

[tool.tox]
min_version = "4.22"
requires = [
  "tox",
  "tox-uv",
]
env_list = [
  "dependencies",
  "typing",
  "3.14",
  "3.13",
  "3.12",
]
env.dependencies.commands = [ [ "deptry", "." ] ]
env.sync.commands = [ [ "tap-readme", { replace = "posargs", default = [ "--config=ENV" ], extend = true } ] ]
env.typing.dependency_groups = [ "testing", "typing" ]
env.typing.commands = [
  [ "mypy", "--strict", "tap_readme", "tests" ],
  [ "ty", "check" ],
]
env_run_base.runner = "uv-venv-lock-runner"
env_run_base.pass_env = [ "TAP_README_*" ]
env_run_base.dependency_groups = [ "testing" ]
env_run_base.commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
labels.test = [ "3.14", "3.13", "3.12" ]
labels.static = [ "dependencies", "typing" ]

[tool.mypy]
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
